--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <section>
       <div class="shoppingDetails">
-        <a href="#"><img src="/images/shopingtime.jpeg" alt="shopingtime" /></a>
+        <a href="#"><img src="images/shopingtime.jpeg" alt="shopingtime" /></a>
         <h2>OUR UPCOMING SALES</h2>
         <table>
           <tr>
